--- a/css.css
+++ b/css.css
@@ -1,7 +1,6 @@
 *{
     margin: 0;
     margin: 0;
-    box-sizing: border-box;
 }
 
 body{
@@ -19,6 +18,18 @@ h3 {
     margin-bottom: 100px;
 }
 
+#background {
+    width: 425px;
+    height: 425px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-size: cover;
+    border-radius: 50%;
+    position: absolute;
+    z-index: 1;
+}
+
 .clock {
     width: 350px;
     height: 350px;
@@ -28,6 +39,7 @@ h3 {
     background-size: cover;
     border: 4px solid #1f1f1f;
     border-radius: 50%;
+    z-index: 10;
 }
 
 .clock:before {
@@ -44,6 +56,7 @@ h3 {
 .clock .min, 
 .clock .sec {
     position: absolute;
+    z-index: 100;
 }
 
 .clock .hour, .hr{
